kubernetes/volleyballnacht/03-ingress.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  namespace: default
  name: ingressroute-volleyballnacht
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`volleyballnacht.jubla-nz.ch`)
      kind: Rule
      services:
        - name: volleyballnacht
          port: 80
  tls:
    certResolver: myresolver
